# joindoe

./: .gitignore  Cargo.toml  README.md  config.yml
scripts/: release-arm64
src/: collect.rs  config.rs  db.rs  loader.rs  main.rs  postprocess.rs  transform.rs
src/transformer/: city.rs  date.rs  email.rs  first_name.rs  from.rs  last_name.rs  mod.rs  null.rs  random.rs  random_value.rs  regex.rs  reverse.rs  sequence.rs  state.rs  statictr.rs  street.rs  zip_code.rs
