[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
description = "Utility to deidentify sensitive data"
edition = "2021"
license = "Apache-2.0"
name = "joindoe"
version = "0.1.0"

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
csv = "1.1"
dotenv = "0.15"
env_logger = "0.9.0"
fake = "2.5"
log = "0.4"
rand = "0.8"
rust-s3 = "0.32"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tempfile = "3.3"
tokio = {version = "1.20.0", features = ["full"]}
tokio-postgres = "0.7.6"
unicode-segmentation = "1.9"
