[package]
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
description = "Utility to deidentify sensitive data"
edition = "2021"
license = "Apache-2.0"
name = "joindoe"
repository = "https://github.com/gistia/johndoe"
version = "0.1.1"

[dependencies]
chrono = "0.4"
clap = {version = "3.2.8", features = ["derive"]}
csv = "1.1"
dotenv = "0.15"
env_logger = "0.9.0"
fake = {version = "2.5", features = ['chrono']}
handlebars = "4.3"
indoc = "1.0"
log = "0.4"
printpdf = "0.5"
rand = "0.8"
rand_regex = "0.15"
rand_xorshift = "0.3"
rust-s3 = "0.32"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tempfile = "3.3"
tokio = {version = "1.20.0", features = ["full"]}
tokio-postgres = "0.7.6"
unicode-segmentation = "1.9"
